--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,16 +18,17 @@ body {
   color: white;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #screen {
-  position: relative;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   height: 500px;
   width: 800px;
   background: black;
 
-  padding: 8px;
   border-radius: 16px;
 }
 
